// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CodePenIframe /> accepts custom height 1`] = `
<iframe
  allowfullscreen=""
  data-testid="codepen"
  frameborder="no"
  height="600"
  scrolling="no"
  src="https://codepen.io/raulfdm/embed/VzmoRM?height=350&theme-id=light&default-tab=css,result"
  style="width: 100%;"
  title="CodePen demo"
/>
`;

exports[`<CodePenIframe /> renders with directUrl 1`] = `
<iframe
  allowfullscreen=""
  data-testid="codepen"
  frameborder="no"
  height="600"
  scrolling="no"
  src="https://codepen.io/raulfdm/embed/VzmoRM"
  style="width: 100%;"
  title="CodePen demo"
/>
`;

exports[`<CodePenIframe /> renders with src 1`] = `
<iframe
  allowfullscreen=""
  data-testid="codepen"
  frameborder="no"
  height="400"
  scrolling="no"
  src="https://codepen.io/raulfdm/embed/VzmoRM?height=350&theme-id=light&default-tab=css,result"
  style="width: 100%;"
  title="CodePen demo"
/>
`;
